# mac-brightness

./: .gitignore  LICENSE  README.md  keyboard-brightness.c
keyboard-brightness/: .gitignore  Cargo.toml  build.rs
keyboard-brightness/src/: bindings.h  lib.rs  main.rs
