[package]
name = "keyboard-brightness"
version = "0.1.0"
authors = ["ojcm <ojcmuir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.1"

[lib]
name = "keyboard_brightness"
crate-type = ["staticlib"]